Button vertical alignment fix.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -527,6 +527,9 @@ body {
 				padding: calc(var(--gap) * 2);
 				height: auto;
 				border-right: 0;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 			main .data-source .column .blanket .form footer button:first-child {
 				border-left: 0;
